--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "terser-webpack-plugin": "^4.1.0",
     "vue": "^2.6.11",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.4.9",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^6.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
+    "style-resources-loader": "^1.4.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
