--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "compression-webpack-plugin": "^6.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
     "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "^7.3.1",
     "style-resources-loader": "^1.4.1",
     "vue-template-compiler": "^2.6.11"
   },
