--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "core-js": "^3.6.5",
     "sass-loader": "^7.3.1",
+    "swiper": "^5.4.5",
     "terser-webpack-plugin": "^4.2.3",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.4.9",
     "vuex": "^3.5.1",
